force-app/main/default/objects/Solarisbank_Api_Config__mdt/Solarisbank_Api_Config__mdt.object-meta.xml
<CustomObject>
    <label>Solarisbank Api Config</label>
    <pluralLabel>Solarisbank Api Config</pluralLabel>
</CustomObject>