force-app/main/default/objects/Solarisbank_Api_Config__mdt/fields/Auth_Uri__c.field-meta.xml
<CustomField>
    <fullName>Auth_Uri__c</fullName>
    <label>Auth Uri</label>
    <length>255</length>
    <type>Text</type>
</CustomField>