force-app/main/default/objects/Solarisbank_Api_Config__mdt/fields/Block_Card_URI__c.field-meta.xml
<CustomField>
    <fullName>Block_Card_URI__c</fullName>
    <label>Block Card URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>