force-app/main/default/objects/Solarisbank_Api_Config__mdt/fields/Bookings_URI__c.field-meta.xml
<CustomField>
    <fullName>Bookings_URI__c</fullName>
    <label>Bookings URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>