force-app/main/default/objects/Solarisbank_Api_Config__mdt/fields/Card_Details_URI__c.field-meta.xml
<CustomField>
    <fullName>Card_Details_URI__c</fullName>
    <label>Card Details URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>