force-app/main/default/objects/Solarisbank_Api_Config__mdt/fields/Close_Card_URI__c.field-meta.xml
<CustomField>
    <fullName>Close_Card_URI__c</fullName>
    <label>Close Card URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>