force-app/main/default/objects/Solarisbank_Api_Config__mdt/fields/Host_Url__c.field-meta.xml
<CustomField>
    <fullName>Host_Url__c</fullName>
    <label>Host Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>