force-app/main/default/objects/Solarisbank_Api_Config__mdt/fields/Proxy_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Proxy_API_Key__c</fullName>
    <label>Proxy API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>