force-app/main/default/objects/Solarisbank_Api_Config__mdt/fields/Reservation_URI__c.field-meta.xml
<CustomField>
    <fullName>Reservation_URI__c</fullName>
    <label>Reservation URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>