force-app/main/default/objects/Solarisbank_Api_Config__mdt/fields/Sepa_Credit_Transfer_URI__c.field-meta.xml
<CustomField>
    <fullName>Sepa_Credit_Transfer_URI__c</fullName>
    <label>Sepa Credit Transfer URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>