force-app/main/default/objects/Solarisbank_Api_Config__mdt/fields/Sepa_Direct_Debit_URI__c.field-meta.xml
<CustomField>
    <fullName>Sepa_Direct_Debit_URI__c</fullName>
    <label>Sepa Direct Debit URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>