force-app/main/default/objects/Solarisbank_Api_Config__mdt/fields/Unblock_Card_URI__c.field-meta.xml
<CustomField>
    <fullName>Unblock_Card_URI__c</fullName>
    <label>Unblock Card URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>